--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,14 @@ body {
   background-color: var(--color-bg-main);
 }
 
+@media screen and (max-width: 400px) {
+  body {
+    display: grid;
+    justify-content: center;
+    padding-top: 50px;
+  }
+}
+
 ul,
 ol {
   list-style-type: none;
@@ -32,7 +40,10 @@ img {
 
 button {
   cursor: pointer;
-  border: none;
+  outline: none;
+}
+
+input {
   outline: none;
 }
 
