--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,17 +1,8 @@
-.contactsTitle {
-  margin-bottom: 15px;
+.title {
+  margin-bottom: 20px;
 }
 
 .contacts {
   list-style-type: disclosure-closed;
   padding-left: 40px;
-}
-
-.contactsItem {
-  margin-bottom: 5px;
-}
-
-.contactsInfo {
-  font-size: 18px;
-  padding-left: 20px;
 }
