--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -14,16 +14,18 @@
   margin-bottom: 4px;
 }
 
-.name {
+.input {
   width: 180px;
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   padding: 5px;
+  padding-left: 8px;
   margin-bottom: 20px;
 }
 
 .btn {
   width: 90px;
+  color: var(--color-text-main);
   background-color: var(--color-bg-sec);
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
